[package]
name = "barista-test-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared test fixtures and corpus indexing helpers."
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.1"

[lib]

[lints]
workspace = true
