[package]
name = "barista-version"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Maven version comparison and ordering (ComparableVersion port)."
publish = false

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
